# ComputerGrafikProjektStudents

./: .gitignore  README.md
GraphicsProject/: CMakeLists.txt  shell.nix
GraphicsProject/Assignment-1/: CMakeLists.txt
GraphicsProject/Assignment-1/include/: shader_path.h  shader_path.h.in
GraphicsProject/Assignment-1/src/: assignment-1.cpp
GraphicsProject/Assignment-2/: CMakeLists.txt
GraphicsProject/Assignment-2/include/: shader_path.h  shader_path.h.in
GraphicsProject/Assignment-2/src/: assignment-2.cpp  dotfragment.frag  linefragment.frag  vertexscale.vert
GraphicsProject/Assignment-3/: CMakeLists.txt
GraphicsProject/Assignment-3/include/: shader_path.h  shader_path.h.in
GraphicsProject/Assignment-3/src/: assignment-3.cpp
GraphicsProject/Assignment-4/: CMakeLists.txt
GraphicsProject/Assignment-4/include/: shader_path.h  shader_path.h.in
GraphicsProject/Assignment-4/src/: assignment-4.cpp  phong.frag  vertextransform.vert
GraphicsProject/Assignment-5/: CMakeLists.txt
GraphicsProject/Assignment-5/include/: shader_path.h  shader_path.h.in
GraphicsProject/Assignment-5/src/: assignment-5.cpp  vertextransform.vert
GraphicsProject/Assignment-6/: CMakeLists.txt
GraphicsProject/Assignment-6/include/: data_path.h  data_path.h.in  shader_path.h  shader_path.h.in
GraphicsProject/Assignment-6/src/: assignment-6.cpp  pain.data  patches.data  phong.frag  rocket.data  vertextransform.vert
GraphicsProject/DIKUgraphics/: CMakeLists.txt
GraphicsProject/DIKUgraphics/include/: bezierpatch.h  beziersurface.h  camera.h  dinisurface.h  edge.h  errorcheck.h  glmutils.h  ifile.h  ifileopr.h  ifileopr.impl  ifileplain.h  kleinbottle.h  linerasterizer.h  parametricsurface.h  phongsurface.h  shaderutils.h  traceinfo.h  triangle.h  windowutils.h
GraphicsProject/DIKUgraphics/src/: bezierpatch.cpp  beziersurface.cpp  camera.cpp  dinisurface.cpp  edge.cpp  errorcheck.cpp  glmutils.cpp  ifileplain.cpp  kleinbottle.cpp  linerasterizer.cpp  parametricsurface.cpp  phongsurface.cpp  shaderutils.cpp  traceinfo.cpp  triangle.cpp  windowutils.cpp
GraphicsProject/cmake/Modules/: FindGLEW.cmake  FindGLM.cmake
