INCLUDE_DIRECTORIES (
    ${OPENGL_INCLUDE_DIR}
    ${GLM_INCLUDE_DIR}
    ${GLEW_INCLUDE_DIR}
    ${GLFW_INCLUDE_DIRS}		    
    ${PROJECT_SOURCE_DIR}/DIKUgraphics/include
)

FILE(
    GLOB
    LIB_HEADERS
    include/*.h
)

FILE(
    GLOB
    LIB_SOURCES
    src/*.cpp
)

ADD_LIBRARY(
    DIKUgraphics
    ${LIB_HEADERS}
    ${LIB_SOURCES}
)

IF(APPLE)
    TARGET_LINK_LIBRARIES (
         DIKUgraphics
         ${OPENGL_LIBRARIES}
         ${GLEW_LIBRARIES}
         ${GLFW_LIBRARIES}
         ${COCOA_LIBRARY}
         ${COREVID_LIBRARY}
         ${IOKIT_LIBRARY}
     )
ELSE()
    TARGET_LINK_LIBRARIES (
        DIKUgraphics
        ${OPENGL_LIBRARIES}
        ${GLEW_LIBRARIES}
        glfw   
    )
ENDIF()

SET_TARGET_PROPERTIES(DIKUgraphics PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(DIKUgraphics PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(DIKUgraphics PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(DIKUgraphics PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(DIKUgraphics PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")

